# crewai-customer-support-app-with-memory

./: README.md  pyproject.toml  report.md
src/customer_support_automation/: crew.py  main.py
src/customer_support_automation/config/: agents.yaml  tasks.yaml
