[project]
name = "customer_support_automation"
version = "0.1.0"
description = "customer-support-automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
customer_support_automation = "customer_support_automation.main:run"
run_crew = "customer_support_automation.main:run"
train = "customer_support_automation.main:train"
replay = "customer_support_automation.main:replay"
test = "customer_support_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
